default panel支持修改颜色

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <provider
             android:name=".InitCp"
-            android:authorities="${applicationId}"
+            android:authorities="${applicationId}.init"
             android:exported="false" />
         <uses-library
             android:name="org.apache.http.legacy"
