--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,7 @@ dependencies {
     implementation 'org.adw.library:discrete-seekbar:1.0.1'
     implementation 'com.github.didikee:AndroidDonate:0.1.0'
 
+    implementation 'com.github.QuadFlask:colorpicker:0.0.13'
     implementation 'com.github.Vove7:CodeView:1.0.2'
     implementation 'com.github.Vove7:BottomDialog:2.1.4'
 
