修复设置组展开失败

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,7 +148,7 @@
             android:theme="@style/AppTheme" />
 
         <activity
-            android:name=".activities.base.LaboratoryActivity"
+            android:name=".activities.LaboratoryActivity"
             android:label="@string/text_laboratory"
             android:theme="@style/AppTheme" />
         <activity
