--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,9 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1994
+        def subVersion = 0
         versionName "1.9.9.3"
+        versionCode Integer.parseInt(versionName.replace(".", "")) * 10 + subVersion
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
