--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,24 +18,33 @@ android {
         multiDexEnabled true
 
         useLibrary 'org.apache.http.legacy'
+
+        resValue "string", "app_name", "V Assistant"
+        resValue "string", "base_acc_service_label", "V Assist基础服务"
+        resValue "string", "gesture_acc_service_label", "V Assist高级服务（7.0+可用）"
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME : "cn.vove7.vassistant",
+                JPUSH_APPKEY : "f4b11a8374fbc79c3746a068", //JPush 上注册的包名对应的 Appkey.
+                JPUSH_CHANNEL : "default", //暂时填写默认值即可.
+        ]
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            resValue "string", "app_name", "V Assistant"
-            resValue "string", "base_acc_service_label", "V Assist基础服务"
-            resValue "string", "gesture_acc_service_label", "V Assist高级服务（7.0+可用）"
 
-            manifestPlaceholders = [
-                    JPUSH_PKGNAME : "cn.vove7.vassistant",
-                    JPUSH_APPKEY : "f4b11a8374fbc79c3746a068", //JPush 上注册的包名对应的 Appkey.
-                    JPUSH_CHANNEL : "default", //暂时填写默认值即可.
-            ]
-
-            ndk {//排除其他 abi
+            ndk {
                 abiFilters "armeabi-v7a"
+            }
+        }
+        release_x86 {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            ndk {
+                abiFilters "x86"
             }
         }
         debug {
