--- a/common/build.gradle
+++ b/common/build.gradle
@@ -11,12 +11,15 @@ android {
         versionName "1.0"
 
         multiDexEnabled true
+        buildConfigField "String", "CONFIG_NAME", '"cn.vove7.vassistant_preferences"'
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "CONFIG_NAME", '"cn.vove7.vassistant_preferences"'
+        }
+        release_x86 {
+
         }
         debug {
             buildConfigField "String", "CONFIG_NAME", '"cn.vove7.vassistant.debug_preferences"'
