--- a/executorengine/build.gradle
+++ b/executorengine/build.gradle
@@ -18,6 +18,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        release_x86 {
+
+        }
     }
     productFlavors {
     }
