--- a/rhino-android/build.gradle
+++ b/rhino-android/build.gradle
@@ -21,6 +21,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        release_x86 {
+
+        }
     }
     compileOptions {
         sourceCompatibility = '1.8'
