--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,7 +157,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.github.Vove7:recycler-fast-scroll:0.3.3'
 
-    implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.4'
+    implementation 'com.king.zxing:zxing-lite:1.1.1'
     implementation 'com.github.tiagohm.MarkdownView:library:0.19.0'
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
 
