--- a/common/build.gradle
+++ b/common/build.gradle
@@ -58,6 +58,10 @@ task makeJar(type: Jar) {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+
     api "androidx.appcompat:appcompat:$androidx_version"
     //    implementation "com.android.support:support-v4:${support_version}@aar"
     api 'org.greenrobot:eventbus:3.1.1'
