--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,7 +131,7 @@ dependencies {
     androidTestImplementation('androidx.test.espresso:espresso-core:3.2.0')
 
     implementation "androidx.appcompat:appcompat:$androidx_version"
-    implementation "androidx.constraintlayout:constraintlayout:$androidx_version"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
@@ -150,6 +150,8 @@ dependencies {
     implementation 'com.github.QuadFlask:colorpicker:0.0.15'
     implementation 'com.github.Vove7:CodeView:1.0.2'
     implementation 'com.github.Vove7:BottomDialog:2.1.7-x'
+
+    implementation 'com.github.Vove7:SlidePickerView:1.0.0'
 
     implementation 'com.github.android-notes:Cockroach:0.0.5'
 
