--- a/push/build.gradle
+++ b/push/build.gradle
@@ -32,7 +32,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'cn.jiguang.sdk:jpush:3.3.6'  // 此处以JPush 3.3.4 版本为例。
+//    api 'cn.jiguang.sdk:jpush:3.3.6'  // 此处以JPush 3.3.4 版本为例。
     api 'cn.jiguang.sdk:jcore:2.1.6'
     api 'cn.jiguang.sdk:janalytics:2.1.0'
 
