--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,8 @@ dependencies {
     implementation project(':admin-manager')
 
     implementation "com.github.infotech-group:android-drawable-dsl:0.3.0"
+    def work_version = "2.3.2"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
 
 }
 repositories {
