优化App选择器 设置启动背景

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".activities.VoiceTestActivity" />
         <activity
             android:name=".activities.MainActivity"
+            android:theme="@style/Main"
             android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
