--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,10 @@ android {
         }
     }
 
+    packagingOptions {
+        exclude 'META-INF/common_release.kotlin_module'
+    }
+
 }
 
 task makeJar(type: Jar) {
