--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,7 +160,7 @@ dependencies {
     implementation 'com.github.Vove7:CodeView:1.0.2'
     implementation 'com.github.Vove7:BottomDialog:2.2.0'
 
-    implementation 'com.github.Vove7:SlidePickerView:1.0.0'
+    implementation 'com.github.Vove7:SlidePickerView:1.0.2'
 
     implementation 'com.github.android-notes:Cockroach:0.0.5'
 
@@ -181,6 +181,8 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
     implementation 'com.gitee.Vove:ScaffoldAndroid:a564fd346d'
+    implementation 'com.google.android:flexbox:2.0.0'
+
 }
 repositories {
     flatDir {
