--- a/common/build.gradle
+++ b/common/build.gradle
@@ -84,5 +84,9 @@ dependencies {
     api 'com.github.Vove7.SmartKey:smartkey-android:6.1.2'
     api 'com.github.Vove7:ParamRegexNdk:1.0.6'
 
+    api 'com.github.Vove7:QuantumClock:0.1.0'
+    api 'com.gitee.Vove:ScaffoldAndroid:a564fd346d'
+
+
     api files('libs/RootShell.aar')
 }
