--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,6 +141,8 @@ dependencies {
 
     implementation "androidx.appcompat:appcompat:$androidx_version"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
+
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
