--- a/common/build.gradle
+++ b/common/build.gradle
@@ -63,7 +63,6 @@ dependencies {
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
 
     api "androidx.appcompat:appcompat:$androidx_version"
-    //    implementation "com.android.support:support-v4:${support_version}@aar"
     api 'org.greenrobot:eventbus:3.1.1'
     api "org.greenrobot:greendao:$greendao_version"
     api "androidx.annotation:annotation:$androidx_version"
@@ -81,11 +80,11 @@ dependencies {
     api 'top.zibin:Luban:1.1.8'//鲁班 压缩图片
     api 'org.jsoup:jsoup:1.11.3'
 
-//    api 'com.gitee.Vove7.SmartKey:smartkey-android:6.2.0'
+    api 'com.github.Vove7.SmartKey:smartkey-android:6.3.0'
     api 'com.github.Vove7:ParamRegexNdk:1.0.7'
 
     api 'com.github.Vove7:QuantumClock:0.1.1'
-    api 'com.gitee.Vove:ScaffoldAndroid:a564fd346d'
+    api 'com.gitee.Vove.ScaffoldAndroid:scaffold:f267c4d566'
 
 
     api files('libs/RootShell.aar')
