--- a/common/build.gradle
+++ b/common/build.gradle
@@ -59,16 +59,16 @@ dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
 
     api "androidx.appcompat:appcompat:$androidx_version"
     api 'org.greenrobot:eventbus:3.1.1'
     api "org.greenrobot:greendao:$greendao_version"
-    api "androidx.annotation:annotation:$androidx_version"
-    api 'com.google.code.gson:gson:2.8.5'
+    api "androidx.annotation:annotation:1.1.0"
+    api 'com.google.code.gson:gson:2.8.6'
     api 'androidx.multidex:multidex:2.0.1'
-    api 'com.squareup.okhttp3:okhttp:4.2.2'
+    api 'com.squareup.okhttp3:okhttp:4.8.0'
     api "com.github.Vove7:VTP:$vtp_version"
     // core
     api 'com.liulishuo.okdownload:okdownload:1.0.5'
@@ -80,7 +80,7 @@ dependencies {
     api 'top.zibin:Luban:1.1.8'//鲁班 压缩图片
     api 'org.jsoup:jsoup:1.11.3'
 
-    api 'com.github.Vove7.SmartKey:smartkey-android:6.3.0'
+    api 'com.github.Vove7.SmartKey:smartkey-android:6.3.1'
     api 'com.github.Vove7:ParamRegexNdk:1.0.7'
 
     api 'com.github.Vove7:QuantumClock:0.1.1'
