--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application
         android:name=".App"
         android:allowBackup="false"
+        android:hasFragileUserData="true"
         android:icon="@mipmap/ic_launcher_vassist"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -14,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_vassist"
         android:supportsRtl="true"
         android:theme="@style/NoActionBar"
-        tools:ignore="GoogleAppIndexingWarning"
+        tools:ignore="GoogleAppIndexingWarning,UnusedAttribute"
         tools:replace="android:allowBackup">
 
         <provider
@@ -392,6 +393,7 @@
 
         <service
             android:name=".services.ForegroundService"
+            android:foregroundServiceType="mediaProjection|location"
             android:label="前台服务"
             android:priority="1000" />
 
