--- a/androlua/build.gradle
+++ b/androlua/build.gradle
@@ -18,6 +18,8 @@ android {
         release_x86 {
 
         }
+        release_ndk_all {
+        }
         debug {
             jniDebuggable = false
         }
