--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,13 @@ if (localPropertiesFile.exists()) {
     }
 }
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29
 
     defaultConfig {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
-        targetSdkVersion 30
-        def subVersion = 1
+        targetSdkVersion 29
+        def subVersion = 2
         versionName "2.1.1"
         def vc = Integer.parseInt(versionName.replace(".", "")) * 10
         if (vc < 10000) {
@@ -71,7 +71,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             ndk {
-                abiFilters "armeabi-v7a", "x86", "arm64-v8a"
+                abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
             }
             signingConfig signingConfigs.release
         }
