--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         classpath "org.greenrobot:greendao-gradle-plugin:$greendao_version" // greendao
 
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.18'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
