请求使用retrofit重构网络请求

--- a/androlua/build.gradle
+++ b/androlua/build.gradle
@@ -23,6 +23,7 @@ android {
         debug {
             jniDebuggable = false
         }
+        debugWithMinify {}
     }
 //    externalNativeBuild {
 //        ndkBuild {
