--- a/common/build.gradle
+++ b/common/build.gradle
@@ -26,6 +26,7 @@ android {
         debug {
             buildConfigField "String", "CONFIG_NAME", '"cn.vove7.vassistant.debug_preferences"'
         }
+        debugWithMinify {}
     }
     productFlavors {
     }
@@ -62,13 +63,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
 
     api "androidx.appcompat:appcompat:$androidx_version"
     api 'org.greenrobot:eventbus:3.1.1'
     api "org.greenrobot:greendao:$greendao_version"
     api "androidx.annotation:annotation:1.1.0"
-    api 'com.google.code.gson:gson:2.8.6'
     api 'androidx.multidex:multidex:2.0.1'
     api 'com.squareup.okhttp3:okhttp:4.8.0'
     api "com.github.Vove7:VTP:$vtp_version"
