--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.0'
+    ext.kotlin_version = '1.4.10'
     ext.greendao_version = '3.3.0'
     ext.vtp_version = '0.0.41'
     ext.androidx_version = '1.2.0'
@@ -34,6 +34,7 @@ allprojects {
         mavenCentral()
         maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url 'https://dl.bintray.com/heruoxin/icebox' }
         google()
         maven {
             url 'https://jitpack.io'
