--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'AndResGuard'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.michaelrocks.paranoid'
 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
@@ -24,7 +25,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         def subVersion = 0
-        versionName "2.1.4"
+        versionName "2.1.5"
         def vc = Integer.parseInt(versionName.replace(".", "")) * 10
         if (vc < 10000) {
             vc *= 10
