--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
         classpath "org.greenrobot:greendao-gradle-plugin:$greendao_version" // greendao
 
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.18'
+        classpath 'io.michaelrocks:paranoid-gradle-plugin:0.3.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
