--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'AndResGuard'
 apply plugin: 'kotlin-kapt'
@@ -18,12 +17,12 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         def subVersion = 1
         versionName "2.1.6"
         def vc = Integer.parseInt(versionName.replace(".", "")) * 10
@@ -54,9 +53,10 @@ android {
         }
     }
 
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding = true
     }
+
     buildTypes {
         release {
             minifyEnabled true
@@ -96,20 +96,6 @@ android {
 
             ndk {//排除其他 abi
                 abiFilters "armeabi-v7a"
-            }
-            signingConfig signingConfigs.release
-        }
-        debug_x86 {
-            applicationIdSuffix ".debug"
-            versionNameSuffix = '1'
-            jniDebuggable = false
-            debuggable = true
-            resValue "string", "app_name", "V Assistant-debug"
-            resValue "string", "base_acc_service_label", "V Assist基础DEBUG"
-            resValue "string", "gesture_acc_service_label", "V Assist高级DEBUG"
-
-            ndk {//排除其他 abi
-                abiFilters "armeabi-v7a", "x86"
             }
             signingConfig signingConfigs.release
         }
@@ -228,15 +214,17 @@ dependencies {
     androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0')
 
     implementation "androidx.appcompat:appcompat:$androidx_version"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.1"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
 
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.2'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation project(':executorengine')
     implementation project(path: ':common')
     implementation project(path: ':androlua')
@@ -259,8 +247,8 @@ dependencies {
     implementation 'com.github.SJJ-dot:Cockroach:2.0.1'
 
     implementation 'com.github.KeepSafe:TapTargetView:1.13.0'
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.github.Vove7:recycler-fast-scroll:0.3.3'
 
     implementation 'com.king.zxing:zxing-lite:1.1.1'
@@ -274,7 +262,7 @@ dependencies {
     def work_version = "2.4.0"
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
-    implementation 'com.google.android:flexbox:2.0.0'
+    implementation 'com.google.android:flexbox:2.0.1'
 
 }
 repositories {
