--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    ext.kotlin_version = '1.5.0'
     ext.greendao_version = '3.3.0'
     ext.vtp_version = '0.0.41'
     ext.androidx_version = '1.2.0'
 
     repositories {
-        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
-
+        maven { url'https://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
+        maven { url'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
         mavenCentral()
         google()
-        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         classpath "org.greenrobot:greendao-gradle-plugin:$greendao_version" // greendao
 
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.18'
@@ -31,11 +30,11 @@ allprojects {
     repositories {
         maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
 
         mavenCentral()
         maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url 'https://dl.bintray.com/heruoxin/icebox' }
         google()
         maven {
             url 'https://jitpack.io'
