安卓应用自动同步指令；fix 文字识别

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,9 +94,9 @@ android {
             resValue "string", "base_acc_service_label", "V Assist基础DEBUG"
             resValue "string", "gesture_acc_service_label", "V Assist高级DEBUG"
 
-            ndk {//排除其他 abi
-                abiFilters "armeabi-v7a"
-            }
+//            ndk {//排除其他 abi
+//                abiFilters "armeabi-v7a"
+//            }
             signingConfig signingConfigs.release
         }
         debugWithMinify {
