--- a/common/build.gradle
+++ b/common/build.gradle
@@ -63,8 +63,8 @@ dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
 
     api "androidx.appcompat:appcompat:$androidx_version"
     api 'org.greenrobot:eventbus:3.1.1'
@@ -83,11 +83,11 @@ dependencies {
     api 'top.zibin:Luban:1.1.8'//鲁班 压缩图片
     api 'org.jsoup:jsoup:1.13.1'
 
-    api 'com.github.Vove7.SmartKey:smartkey-android:6.3.1'
+    api 'com.github.Vove7.SmartKey:smartkey-android:6.3.3'
     api 'com.github.Vove7:ParamRegexNdk:1.0.7'
 
     api 'com.github.Vove7:QuantumClock:0.1.1'
-    api 'com.gitee.Vove.ScaffoldAndroid:scaffold:f267c4d566'
+    api 'com.github.Vove7:ScaffoldAndroid:1.0.1'
 
     api 'com.github.heruoxin:IceBox-SDK:55dd857d74'
 
