--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,16 +124,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    dexOptions {
-        //最大堆内存
-        javaMaxHeapSize "4g"
-        //是否支持大工程模式
-        jumboMode = true
-        //预编译
-        preDexLibraries = true
-        //线程数
-        threadCount = 8
-    }
     productFlavors {
     }
     packagingOptions {
@@ -213,8 +203,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0')
 
-    implementation "androidx.appcompat:appcompat:$androidx_version"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.0"
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
 
     implementation 'com.google.android.material:material:1.4.0'
@@ -226,6 +216,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation project(':executorengine')
     implementation project(path: ':common')
+    implementation project(path: ':jadb')
     implementation project(path: ':androlua')
     implementation project(path: ':rhino-android')
 
@@ -246,8 +237,8 @@ dependencies {
     implementation 'com.github.SJJ-dot:Cockroach:2.0.1'
 
     implementation 'com.github.KeepSafe:TapTargetView:1.13.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.Vove7:recycler-fast-scroll:0.3.3'
 
     implementation 'com.github.Vove7.MarkdownView:library:0.20.1'
