--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.5.20'
+    ext.kotlin_version = '1.5.21'
     ext.greendao_version = '3.3.0'
     ext.vtp_version = '0.0.41'
     ext.androidx_version = '1.3.0'
 
     repositories {
-        maven { url'https://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
-        maven { url'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven { url'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
-        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
+//        maven { url'https://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
+//        maven { url'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        maven { url'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+//        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
         mavenCentral()
         //noinspection JcenterRepositoryObsolete
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.greenrobot:greendao-gradle-plugin:$greendao_version" // greendao
 
@@ -28,9 +28,9 @@ buildscript {
 
 allprojects {
     repositories {
-        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
-        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
+//        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+//        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
 
         mavenCentral()
         //noinspection JcenterRepositoryObsolete
